* Added [[Extension:SecurePHP]] extension
* Added [[Extension:GoogleCode]] extension
* Major simplification of 'FileSystemSyntaxColoring' extension
* 'Wikified' the changelog file

== REL1_10_12: (released ...) ==
* Fixed [[Extension:StubManager]] for bug with 'exclude' namespaces
* Added [[Extension:NamespaceManager]] extension
* Added [[Extension:PageServer]] extension
* Added [[Extension:ExtensionManager]] extension
* Added [[Extension:RepositoryManager]] extension
* Fixed '*' rights for skin related CSS files: 'Common.css' & 'Monobook.css'  (Thanks Uri)
* Enhancements to [[Extension:ForeachFunction]]
* Enhancements to [[Extension:SecureProperties]]
* Added additional check in SpecialPageManager to bullet proof against more PHP versions
* BizzWikiSettings.php: some cleanup and normalization
* Added '#foreachc' parser function to [[Extension:ForeachFunction]]
* Removed 'EditPage.php' from 'includes': no modification was present anyways
* Added 'defines' in each patched file from the stock MediaWiki 'includes' directory (see next bullet)
* Enhanced the installation procedure with one simple check: 
** See if the patched file 'Article.php' is available
* Simple re-factoring of 'ParserPhase2' extension
* Added 'per-namespace' sidebars to 'SidebarEx' extension
* Fixed for warning in [[Extension:ExtensionClass]]
* Small enhancement to [[Extension:ImageLink]]
* [[Extension:ParserPhase2]]: added nested (i.e. recursive) commands
* Added [[Extension:SpecialPagesChangeLocation]]
* Enhanced [[Extension:StubManager]] with links to MediaWiki.org for each registered extension
* Fixed PHP warning in [[Extension:SidebarEx]]
* Added [[Extension:Backup]]
* First pass clean-up of unused scripts in /scripts
* Clean of unused extensions (SimpleReplicator, Updater and UserClassEx)
* Added 'isExtensionRegistered' & 'configureExtension' & 'getVersion' methods to [[Extension:StubManager]]
* Moved logo related files to /logo directory
* Deleted 'specialpages' directory
* 