@@ -1,0 +1,13 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE manifest:manifest PUBLIC "-//BizzWiki.org//DTD Manifest 1.0//EN" "Manifest.dtd">
+
+<manifest:manifest xmlns:manifest="http://bizzwiki.org/2007/manifest">
+
+ <manifest:file-entry manifest:media-type="application/php" manifest:full-path="ManageNamespaces.body.php"/>
+ <manifest:file-entry manifest:media-type="application/php" manifest:full-path="ManageNamespaces.php"/>
+ <manifest:file-entry manifest:media-type="application/php" manifest:full-path="ManageNamespaces.i18n.php"/>
+ <manifest:file-entry manifest:media-type="application/php" manifest:full-path="ManageNamespaces.i18n.log.php"/>
+
+ <manifest:file-entry manifest:media-type="text/wikitext" manifest:full-path="ManageNamespaces.doc.wikitext"/>
+ <manifest:file-entry manifest:media-type="text/wikitext" manifest:full-path="ManageNamespaces.specialpage.wikitext"/>
+</manifest:manifest>
