@@ -1,0 +1,22 @@
+<?php
+/*<!--<wikitext>-->
+ <file>
+  <name>ManageNamespaces.body.php</name>
+  <version>$Id$</version>
+  <package>Extension.ManageNamespaces</package>
+ </file>
+<!--</wikitext>-->*/
+//<source lang=php>
+
+class ManageNamespaces extends SpecialPage
+{
+	public function __construct() 
+	{ parent::__construct("ManageNamespaces"); }
+	
+	public function execute()
+	{
+		
+	}
+	
+} // end class
+//</source>
