@@ -1,0 +1,25 @@
+<?php
+/*<!--<wikitext>-->
+ <file>
+  <name>ManageNamespaces.i18.php</name>
+  <version>$Id$</version>
+  <package>Extension.ManageNamespaces</package>
+ </file>
+<!--</wikitext>-->*/
+//<source lang=php>
+
+// register the messages
+ManageNamespaces::addMessages( array(
+'en' => array(
+// en section
+'namespacemanager'								=> '<b>Namespace Manager: </b>',
+#'extensionmanager'.'' => '',
+#'' => '',
+),
+// fr section
+# 'fr' => array(
+# '' => '',
+# '' => '',
+#),
+) );
+//</source>
